--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 # Distributed under the Boost Software License, Version 1.0.
 # https://www.boost.org/LICENSE_1_0.txt
 
-cmake_minimum_required(VERSION 3.8...3.20)
+cmake_minimum_required(VERSION 3.14...3.20)
 
 project(boost_cmake_demo LANGUAGES CXX)
 
@@ -12,4 +12,5 @@ add_subdirectory(deps)
 # Declare main executable
 add_executable(boost_cmake_demo src/main.cpp)
 
+# Our executable uses Boost::system
 target_link_libraries(boost_cmake_demo Boost::system)
